fixed mobile sidebar link issue with z-index

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,8 +1,3 @@
-@media screen and (min-width: 768px) {
-  #masthead h1 {
-    font-size: 50px;
-  }
-}
 
 .navbar-bright {
  background-color:#111155;
@@ -11,6 +6,10 @@
 
 .affix-top,.affix{
  position: static;
+}
+
+#resource {
+ z-index:-900;
 }
 
 @media (min-width: 979px) {
@@ -30,4 +29,10 @@
 #sidebar li.active {
   border:0 #eee solid;
   border-right-width:5px;
+}
+
+@media screen and (min-width: 768px) {
+  #masthead h1 {
+    font-size: 50px;
+  }
 }
