--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,12 @@ header p {
 	font-size: .85em;	
 }
 
+@media (max-width: 998px) {
+	h1 #sec0 {
+		padding-top: -50px;
+	}
+}
+
 @media (max-width: 418px) {
 	header h1 {
 		font-size: 4.5em;
